2022-07-29  Charlie Keaney  <charlie.keaney@embecosm.com>

	* gas/config/tc-riscv.c: Fixed bug that allowed use of invalid operand 64 with cm.jt.

2022-02-09  Nick Clifton  <nickc@redhat.com>

	2.38 release.
	* Makefile.in: Regenerate.
	* configure: Regenerate.

2022-01-28  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2022-01-24  Nick Clifton  <nickc@redhat.com>

	* po/uk.po: Updated Ukranian translation.

2022-01-22  Nick Clifton  <nickc@redhat.com>

	* configure: Regenerate.
	* po/gas.pot: Regenerate.

2022-01-22  Nick Clifton  <nickc@redhat.com>

	* 2.38 release branch created.

2022-01-17  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: Regenerate.
	* po/gas.pot: Regenerate.

2022-01-17  Sergey Belyashov  <sergey.belyashov@gmail.com>

	PR 28762
	* app.c (do_scrub_chars): Correct handling when the symbol is not 'af'.

2021-12-16  Nick Clifton  <nickc@redhat.com>

	PR 28686
	* config/tc-avr.h (tc_fix_adjustable): Define.
	* config/tc-avr.c (avr_fix_adjustable): New function.
	* testsuite/gas/all/gas.exp: Skip tests that need adjustable fixups.
	* testsuite/gas/elf/elf.exp: Likewise.
	* testsuite/gas/avr/diffreloc_withrelax.d: Adjust expected output.
	* testsuite/gas/avr/pc-relative-reloc.d: Adjust expected output.

2021-11-26  Tom de Vries  <tdevries@suse.de>

	PR 28629
	* dwarf2dbg.c (out_dir_and_file_list): When copying file 1 to file 0,
	also copy dir and md5 fields.
	* testsuite/gas/i386/dwarf5-line-4.d: Adjust expected output.

2021-11-18  Nick Clifton  <nickc@redhat.com>

	* as.c (parse_args): Add support for --multibyte-handling.
	* as.h (multibyte_handling): Declare.
	* app.c (scan_for_multibyte_characters): New function.
	(do_scrub_chars): Call the new function if multibyte warning is
	enabled.
	* input-scrub,c (input_scrub_next_buffer): Call the multibyte
	scanning function if multibyte warnings are enabled.
	* symbols.c (struct symbol_flags): Add multibyte_warned bit.