@@ -1,4 +1,4 @@
 # zcmb has a conflict with full set c ext.
 .option rvc
 target:
-	cm.lb x8,(x8)
+	cm.lb x8,8(x8)
