@@ -8,19 +8,18 @@
 Disassembly of section .text:
 
 0+000 <target>:
-[	 ]*[0-9a-f]+:[	 ]+a120[	 ]+cm.sb[	 ]+s0,2\(a0\)
-[	 ]*[0-9a-f]+:[	 ]+aa1c[	 ]+cm.sb[	 ]+a5,1\(a2\)
-[	 ]*[0-9a-f]+:[	 ]+a080[	 ]+cm.sb[	 ]+s0,0\(s1\)
+[	 ]*[0-9a-f]+:[	 ]+8920[	 ]+c.sb[	 ]+s0,2\(a0\)
+[	 ]*[0-9a-f]+:[	 ]+8a5c[	 ]+c.sb[	 ]+a5,1\(a2\)
+[	 ]*[0-9a-f]+:[	 ]+8880[	 ]+c.sb[	 ]+s0,0\(s1\)
 [	 ]*[0-9a-f]+:[	 ]+a044[	 ]+cm.sb[	 ]+s1,4\(s0\)
 [	 ]*[0-9a-f]+:[	 ]+a870[	 ]+cm.sb[	 ]+a2,7\(s0\)
 [	 ]*[0-9a-f]+:[	 ]+a794[	 ]+cm.sb[	 ]+a3,8\(a5\)
 [	 ]*[0-9a-f]+:[	 ]+aff8[	 ]+cm.sb[	 ]+a4,15\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+a024[	 ]+cm.sb[	 ]+s1,2\(s0\)
-[	 ]*[0-9a-f]+:[	 ]+ab9c[	 ]+cm.sb[	 ]+a5,1\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+a000[	 ]+cm.sb[	 ]+s0,0\(s0\)
+[	 ]*[0-9a-f]+:[	 ]+a044[	 ]+cm.sb[	 ]+s1,4\(s0\)
+[	 ]*[0-9a-f]+:[	 ]+abdc[	 ]+cm.sb[	 ]+a5,5\(a5\)
+[	 ]*[0-9a-f]+:[	 ]+a060[	 ]+cm.sb[	 ]+s0,6\(s0\)
 [	 ]*[0-9a-f]+:[	 ]+a0dc[	 ]+cm.sb[	 ]+a5,4\(s1\)
 [	 ]*[0-9a-f]+:[	 ]+aa7c[	 ]+cm.sb[	 ]+a5,7\(a2\)
 [	 ]*[0-9a-f]+:[	 ]+a794[	 ]+cm.sb[	 ]+a3,8\(a5\)
 [	 ]*[0-9a-f]+:[	 ]+aff8[	 ]+cm.sb[	 ]+a4,15\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+a380[	 ]+cm.sb[	 ]+s0,0\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+a004[	 ]+cm.sb[	 ]+s1,0\(s0\)
+[	 ]*[0-9a-f]+:[	 ]+8804[	 ]+c.sb[	 ]+s1,0\(s0\)
